# django-autoinit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
docs/: architecture.md  configuration.md  gfi-example.md
src/autoinit/: __init__.py  apps.py  mixins.py  orchestrator.py
src/autoinit/management/commands/: autoinit.py  autoinit_infrastructure.py  autoinit_node.py  set_ready.py
